@@ -1,4 +1,4 @@
-/* $Id: desktop.c,v 1.8 2004/07/12 10:33:04 weiden Exp $
+/* $Id: desktop.c,v 1.9 2004/08/15 19:02:40 chorns Exp $
  *
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS system libraries
@@ -7,13 +7,8 @@
  * PROGRAMMER:      Eric Kohl
  */
 
-#include <ntos.h>
-#include <windows.h>
-#include <userenv.h>
-#include <tchar.h>
+#include "precomp.h"
 #include <shlobj.h>
-
-#include "internal.h"
 
 
 /* FUNCTIONS ***************************************************************/
